--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 git+git://github.com/Theano/Theano.git
-lasagne
+git+git://github.com/Lasagne/Lasagne.git
 git+git://github.com/ferrine/pymc3.git@user_model
