--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,11 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py34, py35
+envlist = clean, py27, py34, py35, stats
 
 [testenv]
 commands =
-    coverage erase
-    coverage run `python -m unittest discover`
+    coverage run {envbindir}/nosetests
     pep8 gelato
 
 deps =
@@ -17,3 +16,17 @@ deps =
     coverage
     nose
     -rrequirements.txt
+
+[testenv:clean]
+deps =
+    coverage
+commands=
+    coverage erase
+
+[testenv:stats]
+deps =
+    coverage
+commands=
+    coverage report
+    coverage html
+
