--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -3,8 +3,9 @@ FROM kaixhin/cuda-theano:8.0
 MAINTAINER Maxim Kochurov <maxim.v.kochurov@gmail.com>
 
 RUN apt-get update && apt-get install -y \
+            pkg-config \
             libpng-dev \
-            libfreetype-dev && \
+            libfreetype6-dev && \
             rm -rf /var/lib/apt/lists/*
 
 RUN pip install -U \
