change toxfile, requirements

--- a/tox.ini
+++ b/tox.ini
@@ -8,13 +8,11 @@ envlist = clean, py27, py34, py35, stats
 
 [testenv]
 commands =
-    coverage run {envbindir}/nosetests
+    coverage run {envbindir}/py.test
     pep8 gelato
 
 deps =
-    pep8
-    coverage
-    nose
+    -rrequirements-dev.txt
     -rrequirements.txt
 
 [testenv:clean]
