--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - "pip install -r requirements.txt pep8 coverage coveralls"
 
 script:
-  - "nosetests -vv --with-timer --with-coverage --cover-package=gelato"
+  - THEANO_FLAGS='gcc.cxxflags="-march=core2"' pytest -v --cov=pymc3
 
 after_success:
   - coveralls
