--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
   - "pip install . --no-deps"
 
 script:
-  - THEANO_FLAGS='gcc.cxxflags="-march=core2"' pytest -v --cov=gelato
+  - THEANO_FLAGS='gcc.cxxflags="-march=core2"' py.test -v --cov=gelato --cov-report term-missing
 
 after_success:
   - coveralls
